changed link to github

--- a/HW/HW1/index.html
+++ b/HW/HW1/index.html
@@ -26,7 +26,7 @@
         <a href="#education">Education and Career</a>
         <a href="#quote">Favorite Quote</a>
         <a href="https://www.linkedin.com/in/carissahalim/" target="_blank">LinkedIn</a>
-        <a href="https://github.com/carissaha/carissaha.github.io.git" target="_blank">GitHub</a>
+        <a href="https://github.com/carissaha/carissaha.github.io" target="_blank">GitHub</a>
     </div>
 
     <div class="content">
