--- a/CW/CW02/skeleton.html
+++ b/CW/CW02/skeleton.html
@@ -5,7 +5,7 @@
 
   <body>
     <h1> 1 5 to the 4 layout practice! Center me! </h1>
-    <h2> Center me, too! </h2>
+    <h2> Center me, too! test </h2>
 
     <p>
       Welcome to the layout lab. This page contains the instructions for what to do...with this 
