--- a/CW/CW02/skeleton.html
+++ b/CW/CW02/skeleton.html
@@ -1,11 +1,13 @@
 <html>
   <head>
-    <link rel="stylesheet" href="solution.css" />
+    <link rel="stylesheet" href="solution.css">
   </head>
 
   <body>
+    <header>
     <h1> 1 5 to the 4 layout practice! Center me! </h1>
     <h2> Center me, too! </h2>
+    </header>
 
     <p>
       Welcome to the layout lab. This page contains the instructions for what to do...with this 
@@ -28,9 +30,9 @@
     flex container by setting it's <code>display</code> property to <code>flex</code>.
     </p>
 
-    <!-- main area -->
+    <!-- main area --><main>
 
-    <!-- left column -->
+    <!-- left column --><aside class="left">
     <h3>Left column</h3>
     <p>
     This column sits on the left of the main area. Wrap this column in a page section that indicates that it is
@@ -40,30 +42,30 @@
     It takes up 1/3 of the width of the overall content area. Accomplish this by setting the
     <code>flex-basis</code> property to <code>33%</code>.
     </p>
-    <!-- end left column -->
+    <!-- end left column --></aside>
 
-    <!-- right column -->
+    <!-- right column --><aside class="right">
     <h3>Right column</h3>
     <p>
     This column is on the right of the main content area. It takes up 2/3 of the main content area width.
     Accomplish this by setting it's <code>flex-basis</code> to <code>67%</code>.
     </p>
 
-    <img src="puppy-mowgli.jpg" alt="puppies">
+    <img src="support.png" alt="puppies">
     <p>
     Float the above image to the right, so that it's to the right of this text instead of above it. Set it's
     <code>width</code> to <code>200px</code> so that it isn't so huge. The height will adjust to keep the scale
     of the image.
     </p>
 
-    <p>
+    <p class="clear">
     For this paragraph, we don't want the text to wrap around the floating image anymore. Use
     <code>clear: both</code> to cause this paragraph to move down below the floating image. Give it an
     <code>id</code> or a <code>class</code> so that you can select this paragraph specifically in your CSS.
     </p>
-    <!-- end right column -->
+    <!-- end right column --></aside>
 
-    <!-- end main area -->
+    <!-- end main area --></main>
 
     <p>
     Both columns should have <code>2em</code> of padding, <code>2em</code> of margin, and a <code>4px</code>
@@ -71,7 +73,7 @@
     box model CSS.
     </p>
 
-    <p>
+    <p class="fixed">
     Finally, use <code>position: fixed</code> to set the position of this paragraph element so that is is
     <code>5px</code> away from the bottom of the browser view port. Depending on how big your browser screen is,
     other text from the page might overlap with it. That proves to be a big challenge with fixed position
