--- a/HW/HW1/index.html
+++ b/HW/HW1/index.html
@@ -116,7 +116,7 @@
                     <tr>
                         <td><a href="../../CW/CW02/index.html" target="_blank">CW02</a></td>
                         <td><a href="../../HW/HW3/index.html" target="_blank">HW3</a></td>
-                        <td><a href="../../ICA/ICA3/index.html" target="_blank">ICA3</a></td>
+                        <td><a href="../../ICA/ICA3/Index.html" target="_blank">ICA3</a></td>
                         <td><a href="../../PW/PW3/index.html" target="_blank">PW3</a></td>
                     </tr>
                 </table>
