--- a/CW/CW02/skeleton.html
+++ b/CW/CW02/skeleton.html
@@ -5,7 +5,7 @@
 
   <body>
     <header>
-    <h1> 1 5 to the 4 layout practice! Center me!test </h1>
+    <h1> 1 5 to the 4 layout practice! Center me! </h1>
     <h2> Center me, too! </h2>
     </header>
 
