--- a/HW/HW2/tmnt.html
+++ b/HW/HW2/tmnt.html
@@ -3,10 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>My Title</title>
+    <link rel="stylesheet" href="movies.css">
+    <title>HW 2</title>
 </head>
-<body> 
-Core material goes here
+<body>
+    <div class="banner-container">
+        <img src="banner.png" class="banner">
+    </div>
+
+    <h1>TMNT (2007)</h1>
+
+    <div class="content-area">
+        <div class="parent-rating">
+        <div class="rating-section">
+            <img src="rottenbig.png" class="rotten-big">
+            <span class="rating">32%</span>
+            <span class="reviews">(88 reviews total)</span>
+        </div>
+        <div class="reviews-columns">
+            <div class="left-col">
+                <div class="review-box">
+                    <div class="text-box">
+                    <img src="rotten.gif" class="rating-icon">
+                    <span class="text">"Ditching the cheeky, self-aware wink that helped to exuse the concept's inherent corniness, the movie attempts to look polished and 'cool', but the been-there animation can't compete witht he then-cutting-edge puppetry of the 1990 live-action movie"</span>
+                    </div>
+
+                    
+                    <div class="critic">
+                        <img src="critic.gif" class="critic-icon">
+                    </div>
+                    <div class="parent-critic">
+                    <div class="critic-info">
+                        <span class="name">Peter Debruge</span>
+                        <span class="publication">Variety</span>
+                    </div>
+                    </div>  
+                </div>
+            </div>
+
+            <div class="right-col">
+                <div class="review-box">
+                    <div class="text-box">
+                    <img src="rotten.gif" class="rating-icon">
+                    <span class="text">"The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, out superheoes on the half shell have been firmly co-opted by the industry their creators once sought to spoof"</span>
+                    </div>
+
+                    
+                    <div class="critic">
+                        <img src="critic.gif" class="critic-icon">
+                    </div>
+                    <div class="parent-critic">
+                    <div class="critic-info">
+                        <span class="name">Jeannette Catsoulis</span>
+                        <span class="publication">New York Times</span>
+                    </div>
+                    </div>  
+                </div>
+            </div>
+
+        </div>
+        </div>
+    </div>
+
 </body> 
 </html> 
