changed hw2 link in website

--- a/HW/HW1/index.html
+++ b/HW/HW1/index.html
@@ -109,7 +109,7 @@
                     </tr>
                     <tr>
                         <td><a href="../../CW/CW01/index.html" target="_blank">CW01</a></td>
-                        <td><a href="../../HW/HW2/index.html" target="_blank">HW2</a></td>
+                        <td><a href="../../HW/HW2/tmnt.html" target="_blank">HW2</a></td>
                         <td><a href="../../ICA/ICA2/index.html" target="_blank">ICA2</a></td>
                         <td><a href="../../PW/PW2/index.html" target="_blank">PW2</a></td>
                     </tr>
