--- a/HW/HW1/index.html
+++ b/HW/HW1/index.html
@@ -105,19 +105,30 @@
                         <td><a href="../../CW/CW00/index.html" target="_blank">CW00</a></td>
                         <td><a href="../../HW/HW1/index.html" target="_blank">HW1</a></td>
                         <td><a href="../../ICA/ICA1/index.html" target="_blank">ICA1</a></td>
-                        <td><a href="../../PW/PW1/index.html" target="_blank">PW1</a></td>
+                        <td><a href="../../PW/HAUNTED/homepage.html" target="_blank">PW1</a></td>
                     </tr>
                     <tr>
                         <td><a href="../../CW/CW01/index.html" target="_blank">CW01</a></td>
                         <td><a href="../../HW/HW2/tmnt.html" target="_blank">HW2</a></td>
                         <td><a href="../../ICA/ICA2/index.html" target="_blank">ICA2</a></td>
-                        <td><a href="../../PW/PW2/index.html" target="_blank">PW2</a></td>
+                        <td><a href="../../PW/PW2/#.html" target="_blank">PW2?</a></td>
                     </tr>
                     <tr>
-                        <td><a href="../../CW/CW02/index.html" target="_blank">CW02</a></td>
-                        <td><a href="../../HW/HW3/index.html" target="_blank">HW3</a></td>
+                        <td><a href="../../CW/CW02/skeleton.html" target="_blank">CW02</a></td>
+                        <td><a href="../../HW/HW3/#.html" target="_blank">HW3?</a></td>
                         <td><a href="../../ICA/ICA3/Index.html" target="_blank">ICA3</a></td>
-                        <td><a href="../../PW/PW3/index.html" target="_blank">PW3</a></td>
+                        <td><a href="../../PW/PW3/#.html" target="_blank">PW3?</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="../../CW/CW03/index.php" target="_blank">CW03</a></td>
+                        <td><a href="../../HW/HW4/#.html" target="_blank">HW4?</a></td>
+                        <td><a href="../../ICA/ICA4/index.php" target="_blank">ICA4</a></td>
+                        <td><a href="../../PW/PW4/#.html" target="_blank">PW4?</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="../../CW/CW04/index.html" target="_blank">CW04</a></td>
+                        <td><a href="../../HW/HW5/#.html" target="_blank">HW5?</a></td>
+                        <td><a href="../../ICA/ICA5/job.html" target="_blank">ICA5</a></td>
                     </tr>
                 </table>
             </div>
